# withershins

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.travis/: setup_osx.sh
cmake/: FindBFD.cmake  FindIberty.cmake
osx/: binutils.rb
src/: CMakeLists.txt  withershins.cpp  withershins.hpp  withershins_unix.cpp  withershins_win.cpp
test/: CMakeLists.txt  test_basic.cpp  test_basic.cpp~RFa3e83c5.TMP
